Login and signup page added

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,8 @@
+/* @import "~bootstrap/dist/css/bootstrap.css"; */
+/* every you want bootstrap pls import in the css file *
 
 
+/
 /* Hero */
 .hero {
   position: relative;
