--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,26 +1,8 @@
-<!-- <header>
-    <nav class="nav container" style=" padding: 25px 60px;">
-
-        <h2 class="nav_logo"><a href="#"><a style="color: black;">Blog</a><a>Stack</a></a></h2>
-
-        <ul class="menu_items">
-            <img src="../../assets/times.svg" alt="timesicon" id="menu_toggle" />
-            <li class="nav_link"><a routerLink="" class="nav_link">Home</a></li>
-            <li class="nav_link"><a routerLink="" class=" nav_link">About</a></li>
-            <li class="nav_link"><a routerLink="login" class="nav_link">Login</a></li>
-            <li class="nav_link"><a href="#" class="nav_link">SignUp</a></li>
-            <li class="nav_link"><a href="#" class="nav_link">Contact</a></li>
-        </ul>
-        <img src="../../assets/bars.svg" alt="timesicon" id="menu_toggle" />
-    </nav>
-</header> -->
-<!-- Header End -->
-
 <!-- Hero Start -->
 <section class="hero">
-    <div class="row container">
+    <div class="row container1">
         <div class="column">
-            <h2>Top free tool and extension to <br />radiply grow you business</h2>
+            <h2 class="text">Top free tool and extension to <br />radiply grow you business</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, architecto?
                 Consectetur enim
                 obcaecati velit quibusdam iure, perspiciatis accusantium, voluptatibus possimus cum
