--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,45 +1,3 @@
-/* Import Google font - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-main {
-  background: #f8f8f8;
-}
-.container {
-  max-width: 1300px;
-  width: 100%;
-  margin: 0 auto;
-}
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-}
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 60px;
-}
-.nav_logo {
-  padding: 10px 0;
-}
-.menu_items {
-  display: flex;
-  list-style: none;
-  gap: 20px;
-}
-a {
-  color:#f12b20;
-  text-decoration: none;
-}
-
 /* Hero */
 .hero {
   position: relative;
@@ -49,134 +7,246 @@ a {
   background-position: 10px 10px, bottom 215px right 10px, left 55% top -1%, left 45% bottom -1px;
   background-repeat: no-repeat;
 }
-.curveImg {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  pointer-events: none;
+
+
+.title {
+  font-weight: 400;
+  letter-spacing: 1.5px;
 }
-.hero .row {
-  display: flex;
-  align-items: center;
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
-  padding: 0 60px;
-  gap: 30px;
-  justify-content: space-between;
-}
-.hero .row h2,
-.hero .row p {
-  color:black;
-}
-.hero .row h2 {
-  font-size: 36px;
-  margin-bottom: 16px;
-}
-.hero .column {
-  width: 50%;
-}
-.buttons {
-  display: flex;
-  margin-top: 25px;
-  gap: 10px;
-}
+
 .btn {
-  padding: 14px 26px;
-  background: #f12b20;
+  height: 45px;
+  width: 250px;
+  margin: 20px auto;
+  box-shadow: 10px 10px 30px rgb(254, 215, 188);
   border-radius: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.login,
+.signup {
+  font-size: 22px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  position: relative;
+  cursor: pointer;
+}
+
+.slider {
+  height: 46px;
+  width: 90px;
+  border-radius: 50px;
+  background-image: linear-gradient(to right,
+          rgb(255, 195, 110),
+          rgb(255, 146, 91));
+  position: absolute;
+  top: 20px;
+  left: 100px;
+  transition: all 0.5s ease-in-out;
+}
+
+.moveslider {
+  left: 250px;
+}
+
+.form-section {
+  height: 500px;
+  width: 1000px;
+  padding: 20px 0;
+  display: flex;
+  position: relative;
+  transition: all 0.5s ease-in-out;
+  left: 0px;
+}
+
+.form-section-move {
+  left: -500px;
+}
+
+.login-box,
+.signup-box {
+  height: 100%;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 40px;
+}
+
+.login-box {
+  gap: 50px;
+}
+
+.signup-box {
+  gap: 30px;
+}
+
+.ele {
+  height: 40px;
+  width: 350px;
+  outline: none;
+  border: none;
+  color: rgb(77, 77, 77);
+  background-color: rgb(240, 240, 240);
+  border-radius: 50px;
+  padding-left: 30px;
+  font-size: 18px;
+}
+
+.clkbtn {
+  height: 60px;
+  width: 150px;
+  border-radius: 50px;
+  background-image: linear-gradient(to right,
+          rgb(255, 195, 110),
+          rgb(255, 146, 91));
+  font-size: 22px;
   border: none;
   cursor: pointer;
-  transition: all 0.3s ease;
-  color:#fff;;
-}
-.btn:last-child {
-  border: 2px solid #fff;
-  background: transparent;
-  color: #fff;
-}
-.btn:last-child:hover {
-  background-color: black;
-  color:#fff;;
-}
-.hero_img {
-  width: 100%;
-    height: 5%;
-    object-fit: none;
-    object-position: 68% 100%;
-    z-index: 10;
-    position: relative;
-    transform: scale(0.9) translate(0, 9%);
-}
-#menu_toggle {
-  display: none;
 }
 
-/* Reponsive */
-@media (width < 860px) {
-  #menu_toggle {
-    display: block;
-  }
-  .nav {
-    padding: 0 20px;
-    background-color: #f12b20;
+/* For Responsiveness of the page */
+
+@media screen and (max-width: 650px) {
+  .container {
+      height: 600px;
+      width: 300px;
   }
 
-  .menu_items {
-    position: fixed;
-    top: 0;
-    width: 260px;
-    background-color: #fff;
-    height: 100%;
-    left: -100%;
-    padding: 50px 30px 30px;
-    flex-direction: column;
-    transition: all 0.5s ease;
+  .title {
+      font-size: 15px;
   }
-  .showMenu .menu_items {
-    left: 0;
-  }
-  a {
-    color: #333;
-  }
-  #menu_toggle {
-    width: 20px;
-    cursor: pointer;
-  }
-  .menu_items #menu_toggle {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-  }
-  .hero {
-    padding-top: 130px;
-  }
-  .hero .row {
-    flex-direction: column;
-    padding: 0 20px;
-    justify-content: center;
-  }
-  .hero .row .column {
-    width: 100%;
-  }
-}
 
-@media (width < 600px) {
-  .hero {
-    padding-top: 80px;
-  }
-  .hero .row h2 {
-    font-size: 26px;
-  }
-  .buttons {
-    justify-content: center;
-  }
   .btn {
-    padding: 10px 16px;
+      height: 50px;
+      width: 200px;
+      margin: 20px auto;
+  }
+
+  .login,
+  .signup {
+      font-size: 19px;
+  }
+
+  .slider {
+      height: 50px;
+      width: 100px;
+      left: 50px;
+  }
+
+  .moveslider {
+      left: 150px;
+  }
+
+  .form-section {
+      height: 500px;
+      width: 600px;
+  }
+
+  .form-section-move {
+      left: -300px;
+  }
+
+  .login-box,
+  .signup-box {
+      height: 100%;
+      width: 300px;
+  }
+
+  .ele {
+      height: 50px;
+      width: 250px;
+      font-size: 15px;
+  }
+
+  .clkbtn {
+      height: 50px;
+      width: 130px;
+      font-size: 19px;
   }
 }
 
+@media screen and (max-width: 320px) {
+  .container {
+      height: 600px;
+      width: 250px;
+  }
 
-.nav_link :hover{
-color: black;
+  .heading {
+      font-size: 30px;
+  }
+
+  .title {
+      font-size: 10px;
+  }
+
+  .btn {
+      height: 50px;
+      width: 200px;
+      margin: 20px auto;
+  }
+
+  .login,
+  .signup {
+      font-size: 19px;
+  }
+
+  .slider {
+      height: 50px;
+      width: 100px;
+      left: 27px;
+  }
+
+  .moveslider {
+      left: 127px;
+  }
+
+  .form-section {
+      height: 500px;
+      width: 500px;
+  }
+
+  .form-section-move {
+      left: -250px;
+  }
+
+  .login-box,
+  .signup-box {
+      height: 100%;
+      width: 250px;
+  }
+
+  .ele {
+      height: 50px;
+      width: 220px;
+      font-size: 15px;
+  }
+
+  .clkbtn {
+      height: 50px;
+      width: 130px;
+      font-size: 19px;
+  }
+}
+
+mat-tab-group{
+  width:60%
+}
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.btnstyle{
+  margin-left: 35%
 }
