--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,8 +7,8 @@
             <img src="../../assets/times.svg" alt="timesicon" id="menu_toggle" />
             <li class="nav_link"><a routerLink="" class="nav_link">Home</a></li>
             <li class="nav_link"><a routerLink="" class=" nav_link">About</a></li>
-            <li class="nav_link"><a routerLink="login" class="nav_link">Login</a></li>
-            <li class="nav_link"><a href="#" class="nav_link">SignUp</a></li>
+            <li class="nav_link"><a routerLink="login" class="nav_link">Login/SignUp</a></li>
+            <!-- <li class="nav_link"><a href="#" class="nav_link">SignUp</a></li> -->
             <li class="nav_link"><a href="#" class="nav_link">Contact</a></li>
         </ul>
         <img src="../../assets/bars.svg" alt="timesicon" id="menu_toggle" />
