form group issue

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -58,6 +58,6 @@
     <div class="column">
       <img src="../../assets/hero.gif" alt="heroImg" class="hero_img" />
     </div>
-  </div>
+  <!-- </div> -->
   <img src="../../assets/bg-bottom-hero.png" alt="" class="curveImg" />
 </section>
