--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <header>
     <nav class="nav container" style=" padding: 25px 60px;">
 
-        <h2 class="nav_logo text"><a href="#"><a style="color: black;">Blog</a><a>Stack</a></a></h2>
+        <h2 class="nav_logo text"><a href="#"><a style="color: black;">Blog</a><a style="color:#f12b20;">Stack</a></a>
+        </h2>
 
         <ul class="menu_items">
             <img src="../../assets/times.svg" alt="timesicon" id="menu_toggle" />
