--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="row justify-content-center" style="position: static;">
+    <router-outlet></router-outlet>
+</div>
