blog and stack page added

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container" style="padding-top: 5%; ">
     <div class="row">
         <div class="col-6" style="padding-top: 10%; position: static;">
@@ -10,7 +11,7 @@
             <br>
             <div class="row">
                 <div class="col-1"></div>
-                <button mat-fab color="warn" aria-label="Example icon button with a delete icon" matTooltip="Read More"
+                <!-- <button mat-fab color="warn" aria-label="Example icon button with a delete icon" matTooltip="Read More"
                     label="Read More" routerLink="login">
                     <mat-icon>read_more</mat-icon>
                 </button>
@@ -28,7 +29,7 @@
                 <button mat-fab color="primary" aria-label="Example icon button with a delete icon"
                     matTooltip="Stack Overflow" style="background-color: black;" routerLink="login">
                     <mat-icon>question_answer</mat-icon>
-                </button>
+                </button> -->
             </div>
         </div>
         <div class="col-6" style="height: 50%;">
