--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <!-- Hero Start -->
 
-
+<app-navbar></app-navbar>
 <div class="container">
   <div class="row">
     <div class="col-6" style="padding-top: 10%; position: static;">
@@ -14,7 +14,7 @@
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Password</mat-label>
-                <input matInput placeholder="Password" formControlName="password">
+                <input matInput placeholder="Password" formControlName="password" type="password">
               </mat-form-field>
             </div>
           </form>
@@ -37,11 +37,11 @@
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Password</mat-label>
-                <input matInput placeholder="Password" formControlName="password">
+                <input matInput placeholder="Password" formControlName="password" type="password">
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Confirm Password</mat-label>
-                <input matInput placeholder="Password" formControlName="confirmPassword">
+                <input matInput placeholder="Password" formControlName="confirmPassword" type="password">
               </mat-form-field>
             </div>
           </form>
