--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,11 +6,12 @@
 
         <ul class="menu_items">
             <img src="../../assets/times.svg" alt="timesicon" id="menu_toggle" />
-            <li class="nav_link"><a routerLink="" class="nav_link">Home</a></li>
-            <li class="nav_link"><a routerLink="" class=" nav_link">About</a></li>
-            <li class="nav_link"><a routerLink="login" class="nav_link">Login/SignUp</a></li>
-            <!-- <li class="nav_link"><a href="#" class="nav_link">SignUp</a></li> -->
-            <li class="nav_link"><a href="#" class="nav_link">Contact</a></li>
+            <li class="nav_link"><a routerLink="" class="nav_link"><b>Home</b></a></li>
+            <li class="nav_link"><a routerLink="" class=" nav_link"><b>About</b></a></li>
+            <li class="nav_link"><a routerLink="login" class="nav_link"><b>SignIn</b></a></li>
+            <li class="nav_link"><a routerLink="blogs" class="nav_link"><b>Blogs</b></a></li>
+            <li class="nav_link"><a routerLink="" class="nav_link"><b>Stack</b></a></li>
+            <li class="nav_link"><a href="#" class="nav_link"><b>Contact</b></a></li>
         </ul>
         <img src="../../assets/bars.svg" alt="timesicon" id="menu_toggle" />
     </nav>
