admin management,contact page,stack and blog page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,10 +8,10 @@
             <img src="../../assets/times.svg" alt="timesicon" id="menu_toggle" />
             <li class="nav_link"><a routerLink="" class="nav_link"><b>Home</b></a></li>
             <li class="nav_link"><a routerLink="" class=" nav_link"><b>About</b></a></li>
-            <li class="nav_link"><a routerLink="login" class="nav_link"><b>SignIn</b></a></li>
-            <li class="nav_link"><a routerLink="blogs" class="nav_link"><b>Blogs</b></a></li>
-            <li class="nav_link"><a routerLink="" class="nav_link"><b>Stack</b></a></li>
-            <li class="nav_link"><a href="#" class="nav_link"><b>Contact</b></a></li>
+            <li class="nav_link"><a (click)="toggleSignIn()" class="nav_link"><b *ngIf="role!=null">SignOut</b><b *ngIf="role==null">SignIn</b></a></li>
+            <li class="nav_link"><a routerLink="/blogs" class="nav_link"><b>Blogs</b></a></li>
+            <li class="nav_link"><a routerLink="/stack" class="nav_link"><b>Stack</b></a></li>
+            <li class="nav_link"><a routerLink="/contact" class="nav_link"><b>Contact</b></a></li>
         </ul>
         <img src="../../assets/bars.svg" alt="timesicon" id="menu_toggle" />
     </nav>
