implemeted user-list and update user in admin panel

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-   overflow: hidden;
+  /* verflow: hidden; */
 }
 
 main {
@@ -86,17 +86,6 @@ a {
   border: none;
   cursor: pointer;
   transition: all 0.3s ease;
-  color:#fff;;
-}
-
-.btn:last-child {
-  border: 2px solid #fff;
-  background: transparent;
-  color: #fff;
-}
-
-.btn:last-child:hover {
-  background-color: black;
   color:#fff;;
 }
 
