--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alatsi&display=swap');
 
+body{
+overflow: hidden;
+
+}
 h2{
 font-family: 'Alatsi', sans-serif;
 font-size: xxx-large;
