--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,41 +1,47 @@
 <app-navbar></app-navbar>
-<br><br><br><br>
-<div class="container">
-    <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-      </mat-form-field>
-      
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
-      
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-          </ng-container>
-      
-          <ng-container matColumnDef="progress">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-            <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-          </ng-container>
-      
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-          </ng-container>
-      
-          <ng-container matColumnDef="fruit">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-            <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
-          </ng-container>
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+
+<div class="container" style="padding-top: 10%;">
+<h4 > User Details </h4>
+<nav class="navbar">
+
+<input class="form-control" type="text" name="first_name" placeholder="find user"></nav>
+
+<div class="mat-elevation-z8">
+  <table class="table table-stripped text-center">
+      <thead >
+          <tr>
+              <th> User-Id </th>
+              <th> Email-Id </th>
+              <th> First Name </th>
+              <th> Last Name </th>
+              <th colspan="2"> Actions </th>
           </tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-      </div> 
-</div>
+      </thead>
+      <tbody>
+          <tr *ngFor="let user of userList paginate :{
+            itemsPerPage:tableSize,
+            currentPage:page,
+            totalItems:count
+          };
+          let i = index;">
+
+          <tr *ngFor="let user of userList">
+              <td> {{user.user_id}} </td>
+              <td> {{ user.email_id }} </td>
+              <td> {{ user.first_name }} </td>
+              <td> {{ user.last_name }} </td>
+              <td><button type="button" class="btn btn-dark" (click) = "updateUser(user)">Update</button></td>
+              <td><button type="button" class= "btn btn-danger" (click)= "deleteUser(user)" >Delete</button></td>
+          </tr>
+      </tbody>
+  </table>
+
+  <div class="d-flex justify-content-center">
+    <!-- <pagination-controls
+      previousLabel="Prev"
+      nextLabel="Next"
+      (pageChange)="onTableDataChange($event)">
+    </pagination-controls>
+  </div> -->
+  </div>
+</div>   
