--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <div class="row">
+  <!-- <div class="col-12">
+  </div> -->
   <div class="col-12">
-  </div>
-  <div class="col-12" style="padding-bottom: 20%;">
     <div class="container">
       <div class="mr-3">
           <div class="row">
