done with update and delete user from admin panel and sweet alert

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,8 +7,8 @@
           <form class="example-form" [formGroup]="LoginForm">
             <div style="padding: 20px">
               <mat-form-field class="example-full-width">
-                <mat-label>Username</mat-label>
-                <input matInput placeholder="Username" formControlName="email_id" />
+                <mat-label>Email Id</mat-label>
+                <input matInput placeholder="Email Id" formControlName="email_id" />
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Password</mat-label>
@@ -33,7 +33,7 @@
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Email Id</mat-label>
-                <input matInput placeholder="Email" formControlName="email_id" />
+                <input matInput placeholder="Email Id" formControlName="email_id" />
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Password</mat-label>
