--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -4,7 +4,7 @@
 <h4 > User Details </h4>
 <nav class="navbar">
 
-<input class="form-control" type="text" name="first_name" placeholder="find user"></nav>
+<input class="form-control" type="text"   placeholder="find user"></nav>
 
 <div class="mat-elevation-z8">
   <table class="table table-stripped text-center">
@@ -18,13 +18,6 @@
           </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let user of userList paginate :{
-            itemsPerPage:tableSize,
-            currentPage:page,
-            totalItems:count
-          };
-          let i = index;">
-
           <tr *ngFor="let user of userList">
               <td> {{user.user_id}} </td>
               <td> {{ user.email_id }} </td>
@@ -36,12 +29,9 @@
       </tbody>
   </table>
 
-  <div class="d-flex justify-content-center">
-    <!-- <pagination-controls
-      previousLabel="Prev"
-      nextLabel="Next"
-      (pageChange)="onTableDataChange($event)">
-    </pagination-controls>
-  </div> -->
+  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons
+        aria-label="Select page of periodic elements">
+</mat-paginator>
+
   </div>
 </div>   
