--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  /* verflow: hidden; */
+  overflow: hidden;
 }
 
 main {
