all bugs resolved

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,4 @@
 <app-navbar></app-navbar>
-<br><br><br>
 <section>
   <div class="section-header">
     <div class="container">
@@ -9,7 +8,6 @@
 
   <div class="container">
     <div class="row">
-
       <div class="contact-info">
         <div class="contact-info-item">
           <div class="contact-info-icon">
@@ -62,11 +60,15 @@
             <textarea required="true" name=""></textarea>
             <span>Type your Message...</span>
           </div>
-
-          <button mat-raised-button color="warn" class="btnstyle">Submit</button>
-        </form>
+          <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+              <button mat-raised-button color="warn">Submit</button>
+            </div>
+            <div class="col-4"></div>
+          </div>
+           </form>
       </div>
-
     </div>
   </div>
 </section>
