--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-<div class="container" style="padding-top: 0%;">
+<div class="container">
     <div class="row">
-        <div class="col-6" style="padding-top: 10%; position: static;">
+        <div class="col-6" style="padding-top: 5%; position: static;">
             <h2>Top free tool and extension to <br />grow you business</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, architecto?
                 Consectetur enim
@@ -13,7 +13,7 @@
                 <div class="col-1"></div>
             </div>
         </div>
-        <div class="col-6" style="height: 50%;">
+        <div class="col-6" style="height: 40%;">
             <img src="../../assets/hero.gif" alt="heroImg" />
         </div>
     </div>
