--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alatsi&display=swap');
 
+
 h2{
 font-family: 'Alatsi', sans-serif;
 font-size: xxx-large;
@@ -9,6 +10,11 @@ font-size: xxx-large;
 
 .col-6 {
   padding-top: 10%;
+}
+
+.col-12{
+  overflow-y: scroll;
+  height: calc(100vh - 200px);
 }
 
 .row {
