--- a/src/app/components/update-user/update-user.component.html
+++ b/src/app/components/update-user/update-user.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
   <div class="row">
-    <div class="col-6" style="padding-top: 10%; position: static">
+    <div class="col-6">
           <h3 class="text-center"><b>Update User</b></h3>
           <form class="example-form" [formGroup]="updateForm">
             <div style="padding: 20px">
