--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,37 +1,75 @@
-<app-navbar></app-navbar>
+<mat-toolbar class="mat-elevation-z8">
+    <button
+      mat-icon-button
+      *ngIf="sidenav.mode === 'over'"
+      (click)="sidenav.toggle()">
+      <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+      <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+    </button>
+    
+    <nav class="nav container" style=" padding: 25px 60px;">
+        <h2 class="nav_logo text"><a href="#"><a style="color: black;"><b>Blog</b></a><a style="color:#f12b20;"><b>Stack</b></a></a></h2>
 
-<div class="container" style="padding-top: 10%;">
-<h4 > User Details </h4>
-<nav class="navbar">
+      <img src="../../assets/bars.svg" alt="timesicon" id="menu_toggle" />
+    </nav>
+</mat-toolbar>
 
-<input class="form-control" type="text"   placeholder="find user"></nav>
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+      <img class="avatar mat-elevation-z8" src="../../../assets/admin.png"/>
+      <h4 class="name">Admin</h4>
 
-<div class="mat-elevation-z8">
-  <table class="table table-stripped text-center">
-      <thead >
-          <tr>
-              <th> User-Id </th>
-              <th> Email-Id </th>
-              <th> First Name </th>
-              <th> Last Name </th>
-              <th colspan="2"> Actions </th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr *ngFor="let user of userList">
-              <td> {{user.user_id}} </td>
-              <td> {{ user.email_id }} </td>
-              <td> {{ user.first_name }} </td>
-              <td> {{ user.last_name }} </td>
-              <td><button type="button" class="btn btn-dark" (click) = "updateUser(user)">Update</button></td>
-              <td><button type="button" class= "btn btn-danger" (click)= "deleteUser(user)" >Delete</button></td>
-          </tr>
-      </tbody>
-  </table>
+     <app-user-profile></app-user-profile>
+  
+      <button mat-button class="menu-button" routerLink="">
+        <mat-icon>home</mat-icon>
+        <span>Home</span></button>
+      
+      <button mat-button class="menu-button" routerLink="" *ngIf="role=='admin'">
+        <mat-icon>settings</mat-icon>
+        <span>Settings</span></button>
+  
+      <button mat-button class="menu-button" routerLink="/contact">
+        <mat-icon>help</mat-icon>
+        <span>Help</span></button>
+      
+      <button mat-button class="menu-button" (click)="logout()" *ngIf="role !=null">
+        <mat-icon>logout</mat-icon>
+        <span>Logout</span></button>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons
-        aria-label="Select page of periodic elements">
-</mat-paginator>
-
-  </div>
-</div>   
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <div class="content mat-elevation-z8">
+        <div class="container" style="padding-top: 2%;">
+          <nav class="navbar">
+          <input class="form-control" type="text" placeholder="find user"></nav>
+          <div class="mat-elevation-z8">
+            <table class="table table-stripped text-center">
+                <thead>
+                    <tr>
+                        <th> Email-Id </th>
+                        <th> First Name </th>
+                        <th> Last Name </th>
+                        <th> Status </th>
+                        <th colspan="2"> Actions </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let user of userList">
+                        <td> {{ user.email_id }} </td>
+                        <td> {{ user.first_name }} </td>
+                        <td> {{ user.last_name }} </td>
+                        <td> {{ user.status}} <mat-slide-toggle [checked]="user.status=='ACTIVE'" disabled="true" color="warn"></mat-slide-toggle></td>
+                        <td><button type="button" class="btn btn-dark" (click) = "updateUser(user)" style="color: white;">Update</button></td>
+                        <td><button type="button" class= "btn btn-danger" (click)= "deleteUser(user)" style="color: white;">Delete</button></td>
+                    </tr>
+                </tbody>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons
+                  aria-label="Select page of periodic elements">
+          </mat-paginator>
+          </div>
+          </div>   
+        </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>  
