Update Profile along with profile pic

--- a/src/app/components/stack/stack.component.html
+++ b/src/app/components/stack/stack.component.html
@@ -25,7 +25,10 @@
   <mat-sidenav-container>
     <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
       <img class="avatar mat-elevation-z8" src="../../../assets/admin.png"/>
+      <div>
       <h4 class="name">Admin</h4>
+      <a routerLink="/update-profile">EDIT </a>
+      </div>
   
     <app-user-profile></app-user-profile>
   
