--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,17 +1,18 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <section>
   <div class="section-header">
-    <div class="container">
+    <div class="container" style="padding-top: 1%;">
       <h3>Contact Us</h3>
     </div>
   </div>
 
-  <div class="container">
+  <div class="container" style="margin-top: -4%;">
     <div class="row">
       <div class="contact-info">
         <div class="contact-info-item">
           <div class="contact-info-icon">
-            <i class="fas fa-home"></i>
+            <i class="bi bi-geo-alt-fill"></i>
+
           </div>
 
           <div class="contact-info-content">
@@ -22,7 +23,7 @@
 
         <div class="contact-info-item">
           <div class="contact-info-icon">
-            <i class="fas fa-phone"></i>
+            <i class="bi bi-telephone-fill"></i>
           </div>
 
           <div class="contact-info-content">
@@ -33,7 +34,7 @@
 
         <div class="contact-info-item">
           <div class="contact-info-icon">
-            <i class="fas fa-envelope"></i>
+            <i class="bi bi-envelope-at-fill"></i>
           </div>
 
           <div class="contact-info-content">
@@ -45,7 +46,8 @@
 
       <div class="contact-form">
         <form action="" id="contact-form">
-          <h3>Send Message</h3>
+          <h3 class="text-center">Send Message</h3>
+          <br>
           <div class="input-box">
             <input type="text" required="true" name="">
             <span>Full Name</span>
@@ -61,13 +63,17 @@
             <span>Type your Message...</span>
           </div>
           <div class="row">
-            <div class="col-4"></div>
+            <div class="col-5">
+            </div>
             <div class="col-4">
               <button mat-raised-button color="warn">Submit</button>
             </div>
-            <div class="col-4"></div>
+            <div class="col-3">
+            </div>
+
           </div>
-           </form>
+
+        </form>
       </div>
     </div>
   </div>
