--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,20 +1,22 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <div class="container">
     <div class="row">
-        <div class="col-6" style="padding-top: 5%; position: static;">
+        <div class="col-6" style="margin-top: 8%;">
             <h2>Top free tool and extension to <br />grow you business</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, architecto?
                 Consectetur enim
                 obcaecati velit quibusdam iure, perspiciatis accusantium, voluptatibus possimus cum
                 voluptates dolorum
                 optio ab vitae. Praesentium voluptas quia voluptates at aperiam aliquid vitae autem!</p>
-            <br>
-            <div class="row">
-                <div class="col-1"></div>
-            </div>
         </div>
-        <div class="col-6" style="height: 40%;">
+        <!-- <br> -->
+        <!-- <div class="row">
+                <div class="col-1"></div>
+            </div> -->
+        <!-- </div> -->
+        <div class="col-6" style="margin-top: -8%;">
             <img src="../../assets/hero.gif" alt="heroImg" />
         </div>
     </div>
 </div>
+<!-- </div> -->
