--- a/src/app/components/update-profile/update-profile.component.html
+++ b/src/app/components/update-profile/update-profile.component.html
@@ -1,140 +1,116 @@
-<mat-toolbar class="mat-elevation-z8">
-    <button
-      mat-icon-button
-      *ngIf="sidenav.mode === 'over'"
-      (click)="sidenav.toggle()">
-      <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
-      <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
-</button>
-    
-    <nav class="nav container" style=" padding: 25px 60px;">
-        <h2 class="nav_logo text"><a href="#"><a style="color: black;"><b>Blog</b></a><a style="color:#f12b20;"><b>Stack</b></a></a></h2>
-        <div class="menu_items" *ngIf="role!='admin'">
-            <div class="container" style="padding-right: 600px;">
-              <div class="row" style="width: 350%;">
-                <div class="col-xs-12" style="padding-left: 20%;">
-                  <input class="form-control" ng-model="search" type="text" placeholder="Search Blogs" >
-                </div>
+<div class="container">
+  <form [formGroup]="userForm" class="row">
+    <div class="col-4" style="padding-top: 5%;">
+      <img class="circular-image"
+        src="{{user?.profile_photo==null?'../../../../../assets/admin.png':user.profile_photo}}" alt="">
+      <button mat-raised-button color="warn" style="margin-left: 15% ; margin-top: 5%;" (change)="onFileSelect($event)"
+        (click)="fileUpload.click()" class="text-center">
+        <input type="file" class="file-input" placeholder="Profile photo" #fileUpload (change)="onFileSelect($event)"
+          accept="image/png, image/gif, image/jpeg" />
+        Upload a
+        profile photo</button>
+      <br>
+      <p style="margin-left: 15% ; margin-top: 5%;">{{fileName || ""}}</p>
+      <!-- <i class="bi bi-paperclip" *ngIf="user?.profile_photo==null" style="color: black;"></i> -->
+    </div>
+    <div class="col-1"></div>
+    <div class="col-7" style="padding-top: 10%;">
+      <div class="row">
+        <div class="col-4">
+          <mat-form-field class="example-full-width">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Email" formControlName="email_id" />
+          </mat-form-field>
+        </div>
+
+        <div class="col-4">
+          <mat-form-field class="example-full-width">
+            <mat-label>First Name</mat-label>
+            <input matInput placeholder="First Name" formControlName="first_name" />
+          </mat-form-field>
+        </div>
+
+        <div class="col-4">
+          <mat-form-field class="example-full-width">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="Last Name" formControlName="last_name" />
+          </mat-form-field>
+        </div>
+
+
+        <div class="col-4">
+          <mat-form-field class="example-full-width">
+            <mat-label>Middle Name</mat-label>
+            <input matInput placeholder="Middle Name" formControlName="middle_name" />
+          </mat-form-field>
+        </div>
+
+
+        <div class="col-4">
+          <mat-form-field class="example-full-width">
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Address" formControlName="address" />
+          </mat-form-field>
+        </div>
+
+
+        <div class="col-4">
+          <mat-form-field class="example-full-width">
+            <mat-label>Gender</mat-label>
+            <mat-select formControlName="gender">
+              <mat-option *ngFor="let option of genderOptions" [value]="option">{{ option }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-4"></div>
+        <!-- <mat-form-field class="example-full-width">
+              <mat-label>Choose a date</mat-label>
+              <input matInput [matDatepicker]="picker" formControlName="date_of_birth">
+              <mat-hint>DD/MM/YYYY</mat-hint>
+              <mat-datepicker-toggle matIconSuffix [for]="picker" style="padding-left: 90%;">
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-datepicker-toggle>
+            </mat-form-field> -->
+
+        <div class="col-4">
+
+          <mat-form-field>
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="date_of_birth">
+            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+
+        </div>
+        <div class="col-4" style="padding-top: 5%; padding-left: 10%;">
+          <button mat-raised-button color="primary" (click)="onSubmit()">Save</button>
+        </div>
+
+      </div>
+
+
+
+      <!-- <input type="file" class="file-input" placeholder="Profile photo" #fileUpload (change)="onFileSelect($event)" />
+        <div class="file-upload">
+
+          {{fileName || "Select image to update profile photo."}}
+
+          <button mat-mini-fab color="primary" class="upload-btn" (click)="fileUpload.click()">
+            <mat-icon>attach_file</mat-icon>
+          </button>
+        </div> -->
+    </div>
+    <!-- </form> -->
+    <!-- <div class="d-flex justify-content-center">
+                <button mat-raised-button color="warn" (click)="onSubmit()">Edit</button>
               </div>
             </div>
+          </div>
         </div>
-        <img src="../../assets/bars.svg" alt="timesicon" id="menu_toggle" />
-    </nav>
-</mat-toolbar>
-  
-  <mat-sidenav-container>
-    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-      <img class="avatar mat-elevation-z8" src="../../../assets/admin.png"/>
-      <div>
-      <h4 class="name">Admin</h4>
-      <a routerLink="/update-profile">EDIT </a>
-      </div>
-  
-    <app-user-profile></app-user-profile>
-  
-      <button mat-button class="menu-button" routerLink="">
-        <mat-icon>home</mat-icon>
-        <span>Home</span></button>
-      
-      <button mat-button class="menu-button" routerLink="/user-list" *ngIf="role=='admin'">
-        <mat-icon>perm_identity</mat-icon>
-        <span>Admin</span></button>
-  
-      <button mat-button class="menu-button" routerLink="/login" *ngIf="role==null">
-        <mat-icon>person</mat-icon>
-        <span>Login</span></button>
-  
-      <button mat-button class="menu-button" routerLink="/blogs" *ngIf="role!='admin'">
-        <mat-icon>dashboard</mat-icon>
-        <span>Blog</span>
-      </button>
-      
-      <button mat-button class="menu-button" routerLink="" *ngIf="role=='admin'">
-        <mat-icon>settings</mat-icon>
-        <span>Settings</span></button>
-  
-      <button mat-button class="menu-button" routerLink="/contact">
-        <mat-icon>help</mat-icon>
-        <span>Help</span></button>
-      
-      <button mat-button class="menu-button" (click)="logout()" *ngIf="role !=null">
-        <mat-icon>logout</mat-icon>
-        <span>Logout</span></button>
-    </mat-sidenav>
-    
-    <mat-sidenav-content>
-      <div class="content mat-elevation-z8">
-        <div class="container">
-          <div class="row">
-            <div class="col-6 offset-md-3">
-                <form class="example-form" [formGroup]="userForm">
-                  <div>
-                  <div class="circular-image">
-                    <img src="{{user.profile_photo}}" alt="Circular Image">
-                  </div>
-                </div>
-                  
-                  <div style="padding: 20px">
-                    <mat-form-field class="example-full-width">
-                        <mat-label>Email</mat-label>
-                        <input matInput placeholder="Email" formControlName="email_id" />
-                      </mat-form-field>
-                    <mat-form-field class="example-full-width">
-                      <mat-label>First Name</mat-label>
-                      <input matInput placeholder="First Name" formControlName="first_name" />
-                    </mat-form-field>
-                    <mat-form-field class="example-full-width">
-                      <mat-label>Last Name</mat-label>
-                      <input matInput placeholder="Last Name" formControlName="last_name" />
-                    </mat-form-field>
-                    <mat-form-field class="example-full-width">
-                        <mat-label>Middle Name</mat-label>
-                        <input matInput placeholder="Middle Name" formControlName="middle_name" />
-                      </mat-form-field>
-                    <mat-form-field class="example-full-width">
-                        <mat-label>Address</mat-label>
-                        <input matInput placeholder="Address" formControlName="address" />
-                      </mat-form-field>
-                  
-                      <mat-form-field class="example-full-width">
-                        <mat-label>Gender</mat-label>
-                        <mat-select formControlName="gender">
-                          <mat-option *ngFor="let option of genderOptions" [value]="option">{{ option }}</mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                     
-                      <mat-form-field class="example-full-width">
-                        <mat-label>Choose a date</mat-label>
-                        <input matInput [matDatepicker]="picker" formControlName="date_of_birth" >
-                        <mat-hint>MM/DD/YYYY</mat-hint>
-                        <mat-datepicker-toggle matIconSuffix [for]="picker">
-                          <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-                        </mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                      </mat-form-field>
-
-                        <input  type="file"  class="file-input" placeholder="Profile photo"  #fileUpload  (change)="onFileSelect($event)"/>
-                        <div class="file-upload">
-
-                           {{fileName || "Select image to update profile photo."}} 
-                           
-                           <button mat-mini-fab color="primary" class="upload-btn"
-                             (click)="fileUpload.click()">
-                               <mat-icon>attach_file</mat-icon>
-                           </button>
-                       </div>
-                  </div>
-                </form>
-                <div class="d-flex justify-content-center">
-                  <button mat-raised-button color="warn" (click)="onSubmit()">Edit</button>
-                </div>
-              </div>
-        </div>
-        </div>
-        </div>
+             </div>
     </mat-sidenav-content>
-  </mat-sidenav-container>  
-
-
-
-
+  </mat-sidenav-container>   -->
+    <!-- </div> -->
+  </form>
+</div>
