--- a/src/app/components/stack/qna/components/question-list/question-list.component.css
+++ b/src/app/components/stack/qna/components/question-list/question-list.component.css
@@ -1,3 +1,7 @@
+mat-toolbar {
+    background: white;
+    color: white;
+  }
 
   button{
     color: #f12b20;
@@ -6,18 +10,18 @@
   a{
     text-decoration: none;
       color:#f12b20;
-    cursor: pointer;
+
 }
 
-/* .menu_items{
+.menu_items{
   font-size: 1rem;
-} */
+}
 
 
   
   mat-sidenav {
     margin: 16px;
-    width: 180px;
+    width: 200px;
     border-right: none;
     background: white;
     border-radius: 10px;
@@ -25,7 +29,7 @@
     text-align: center;
   }
   
-  /* .content {
+  .content {
     height: calc(100vh - 130px);
     border-radius: 10px;
     margin: 16px;
@@ -34,13 +38,13 @@
     padding: 16px;
   
     overflow: auto;
-  } */
+  }
   
-  /* mat-sidenav-container {
+  mat-sidenav-container {
     height: calc(100vh - 65px);
-  } */
+  }
   
-  /* .menu-button {
+  .menu-button {
     width: 100%;
     display: flex;
     align-items: center;
@@ -50,9 +54,9 @@
     mat-icon {
       margin-right: 8px;
     }
-  } */
+  }
   
-  /* .avatar {
+  .avatar {
     margin-top: 16px;
     width: 100px;
     height: 100px;
@@ -68,18 +72,18 @@
     margin-top: 2px;
     font-size: 0.7rem;
     color: lightgrey;
-  } */
-/*   
+  }
+  
   mat-divider {
     margin-top: 16px;
     margin-bottom: 16px;
     background-color: rgba(255, 255, 255, 0.5);
-  } */
+  }
 
-  /* .mat-form-field-wrapper {
+  .mat-form-field-wrapper {
     position: relative;
     color: black;
-} */
+}
 
 .tp-container {
   position: absolute;
@@ -103,3 +107,7 @@
   padding-bottom: 2%;
   padding-left: 3%;
 }   
+
+mat-card{
+ margin-bottom: 0.8%;
+}
